--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
 % \usepackage[utf8]{inputenc}
 % \usepackage[T1]{fontenc}
-\usepackage{lmodern}
+%% \usepackage{lmodern}
 \usepackage{graphicx}
 \usepackage[small]{caption}
 \usepackage{amsmath, amssymb}
