--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -249,7 +249,7 @@ prescribed $\delta$ : if $||\Delta x|| > \delta$, $\theta = \delta /
   \centering
   \begin{tabular}{|l|c|c|}
     \hline
-    & Local Bernoulli (stationary) \footnotemark & Global Bernoulli (instationary) \\
+    & Local (stationary \& instationary) & Global (instationary) \\
     \hline
     Pression benchmark & 73.23 & 85.51\\
     Pression lequere & 59.08 & 76.98\\
@@ -257,8 +257,6 @@ prescribed $\delta$ : if $||\Delta x|| > \delta$, $\theta = \delta /
   \end{tabular}
   \caption{Mass flux for different boundary conditions}
 \end{table}
-\footnotetext{verifier que les resultats
-      sont les meme en instationnaire}
 \section{Conclusion}
 TODO
 \listoffigures
