--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -157,7 +157,7 @@ $K$. Then we apply Green formulae to convert the $d$-dimensional
 integrals over $K$ into $d-1$ integrals over the boundary $\partial K$
 of each control volume :
 
-Eqs ici
+TODO Eqs ici
 
 Note that this is only a reformulation, and no discretisation was
 done. Solutions of this problem are solutions of the original problem,
@@ -185,7 +185,7 @@ conservation laws on a control volume $K$.
 
 Our problem is now to choose suitable interpolation methods for the
 integrals
-\subsection{Implementation}
+\subsection{Newton method}
 At the core of the algorithm is the solution of a nonlinear system of
 size equal to the number of cells. We use the standard Newton
 algorithm : we linearize the problem around an iterate $x_n$, solve
@@ -203,16 +203,12 @@ result is a linear system, wich is solved for $x_{n+1}$. The iteration
 is carried out until convergence. We stop the iterations when both the
 increment $||x_{n} - x_{n-1}||_\infty$ and the residual
 $||f(x_n)||_\infty$ are lower than $\varepsilon =
-10^{-10}$. Convergence can be seen in
-Fig. \ref{fig:conv_newton}. After a transient, we observe the
-characteristic quadratic convergence of Newton method, and convergence
-is quickly achieved.
-\begin{figure}[htb]
-\centering
-\includegraphics{figs/convergence}
-\caption{Convergence of Newton method}
-\label{fig:conv_newton}
-\end{figure}
+10^{-10}$. Theoretically, this method is known to converge
+quadratically when $x_0$ is close to the solution. In our problem,
+since no approximation of the solution is available, we simply use
+$x_0 = 0$, and the algorithm is numerically found to converge (see
+section \ref{sec:conv_newton} for details).
+
 \subsubsection{Solving the linear system}
 Solution of linear systems is of order $\mathcal O (n^3)$. This, as
 well as the memory cost of keeping $n^2$ entries, is prohibitively
@@ -230,21 +226,44 @@ ill-conditioned problems, this iterative algorithm may not converge
 fast enough : we then fall back to a direct method, which is slower
 and less precise but has no convergence issues.
 
-\subsubsection{Convergence criterion}
-
 \subsubsection{Under-relaxation}
 For some problems, Newton method may oscillate around the solution. An
 easy solution for this is to limit the amplitude of steps taken :
 instead of $x_{n+1} = x_n + \Delta x$, we use $x_{n+1} = x_n +\theta
 \Delta x$, where $\theta < 1$ is the under-relaxation factor. This
 prevents oscillations but may lead to slower convergence. A sensible
-choice is to limit the magnitude of the steps to be no greater than a
-prescribed $\delta$ : if $||\Delta x|| > \delta$, $\theta = \delta /
-||\Delta x||$, and if not, $\theta = 1$.
+choice for $\theta$ is to limit the magnitude of the steps to be no
+greater than a prescribed $\delta$ : if $||\Delta x|| > \delta$,
+$\theta = \delta / ||\Delta x||$, and if not, $\theta = 1$.
+
+\subsection{Methods for instationary flow}
+TODO
+trapezoidal rule -> pareil que stationnaire en itératif. Permet de
+laisser certains bouts explicites là où c'est difficile en implicite
+(ex : GB). Vérifié que ça donne la même solution en instationaire et stationaire
 \section{The chimney problem}
+TODO
 \section{Numerical experiments}
 \subsection{Methodology}
-\subsection{Results}
+TODO
+\subsection{Convergence}
+\subsubsection{Newton convergence}
+\label{sec:conv_newton}
+Convergence can be seen in Fig. \ref{fig:conv_newton}. After a
+transient, we observe the characteristic quadratic convergence of
+Newton method in both residual $||f(x_n)||$ and increment $||x_{n} -
+x_{n-1}||$.
+\begin{figure}[htb]
+\centering
+\includegraphics{figs/convergence}
+\caption{Convergence of Newton method in a typical case.}
+\label{fig:conv_newton}
+\end{figure}
+
+\subsubsection{Mesh convergence}
+TODO
+\subsection{Effects of different boundary conditions}
+TODO
 \begin{table}[!h]
   \centering
   \begin{tabular}{|l|c|c|}
