--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
-% \usepackage[utf8]{inputenc}
-% \usepackage[T1]{fontenc}
-%% \usepackage{lmodern}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage{graphicx}
 \usepackage[small]{caption}
 \usepackage{amsmath, amssymb}
@@ -242,7 +242,12 @@ trapezoidal rule -> pareil que stationnaire en itératif. Permet de
 laisser certains bouts explicites là où c'est difficile en implicite
 (ex : GB). Vérifié que ça donne la même solution en instationaire et stationaire
 \section{The chimney problem}
-TODO
+TODO intro benchmark, free convection
+\subsection{Physical setup}
+TODO schéma
+\subsection{Boundary conditions}
+TODO LB/GB, pression en haut ...
+
 \section{Numerical experiments}
 \subsection{Methodology}
 TODO
@@ -276,6 +281,8 @@ TODO
   \end{tabular}
   \caption{Mass flux for different boundary conditions}
 \end{table}
+\subsection{Chimney in a larger box}
+TODO
 \section{Conclusion}
 TODO
 \listoffigures
