Tableau plus complet

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -349,12 +349,12 @@ sur des courbes
 TODO rapport avec les autres benchmarks
 \begin{table}[!h]
   \centering
-  \begin{tabular}{|l|c|c|}
+  \begin{tabular}{|l|c|c|c|c|}
     \hline
-    & Local (stationary \& instationary) & Global (instationary) \\
+    & LB Bench & LB Lequere & GB Bench & GB Lequere \\
     \hline
-    Pression benchmark & 73.23 & 85.51\\
-    Pression lequere & 59.08 & 76.98\\
+    Cl U Neumann & 72.93 & 58.57 & 85.50 & 76.99\\
+    Cl U Dirichlet & 73.23 & 59.08 & 85.51 & 77.00 \\
     \hline
   \end{tabular}
   \caption{Mass flux for different boundary conditions}
