--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -346,7 +346,7 @@ TODO trouver un critère : problème modèle dont la solution est connue
 et trouver l'ordre ? ou alors l'admettre et vérifier la convergence
 sur des courbes
 \subsection{Effects of different boundary conditions}
-TODO rapport avec les autres benchmarks
+TODO rapport avec benchmark, lequere. comparer les courbes
 \begin{table}[!h]
   \centering
   \begin{tabular}{|l|c|c|c|c|}
@@ -360,7 +360,10 @@ TODO rapport avec les autres benchmarks
   \caption{Mass flux for different boundary conditions}
 \end{table}
 \subsection{Chimney in a larger box}
-TODO interfacer triangle avec le programme
+TODO interfacer triangle avec le programme, ou mesher en
+rectangles. Va poser des problèmes en stationnaire parce que
+turbulent, essayer en instationnaire et voir si il y a solution
+stationnaire dans la cheminée
 \section{Conclusion}
 TODO
 \listoffigures
