--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -9,7 +9,8 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Z}{\mathbb{Z}}
 % helper macro for vectors
-\newcommand{\vb}[1]{\ensuremath{\mathbf{#1}}}
+\usepackage{bm}
+\newcommand{\vb}[1]{\ensuremath{\boldsymbol #1}}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{definition}{Definition}
@@ -24,6 +25,39 @@
 
 \section{Introduction}
 TODO
+
+points \`a mentionner dans l'introduction:
+
+- passer en revue les m\'ethodes num\'eriques pour convection naturelle:
+
+sch\'emas \'el\'ements finis \cite{gun-89-fin,pironneau}, 
+volumes finis sur grilles d\'ecal\'ees, sch\'ema MAC \cite{har-65-num,Pat-80-num},
+\'etudi\'e dans \cite{har-65-num,nic-92-ana,cho-97-ana,cho-97-mac}
+volumes finis  colocalis\'es (collocated), n\'ecessitent stabilisation
+\cite{mat-97-apr,brezzip,brezzip2}
+
+m\'ethodes de projection (solution stationnaire n\'ecessite limite
+probl\`eme transitoire, et conditions aux limites
+artificielles en pression) \cite{mat-97-pre} 
+
+m\'ethodes coupl\'ees pour pb stationnaires ou transitoires
+ (mais nonlin\'earit\'es impliquent Newton ou limite pb transitoire) 
+
+
+
+- benchmark pour comparer diff\'erentes approches en convection naturelle
+
+- ranger les diff\'erents logiciels du bench selon les m\'ethodes num\'eriques
+utilis\'ees
+
+FLUENT \cite{mat-97-apr,mat-97-pre}
+
+code colocalis\'e Ch\'enier \cite{che-09-col,che-08-col,che-06-num}
+
+AQUILON devenu THETIS
+
+
+
 \section{Physical context}
 We study a fluid contained in a d-dimensional (d = 2 or 3) domain
 $\Omega$, with a boundary $\partial \Omega$. Positions are specified
@@ -40,15 +74,15 @@ momentum (Newton's Second Law) and conservation of mass in the case of
 a fluid. The conservation of momentum equation reads
 \begin{equation}
   \label{ns-mom}
-  \rho \left(\frac{\partial \mathbf{v}}{\partial t} + \mathbf{v} \cdot
-    \nabla \mathbf{v}\right) = -\nabla p + \nabla \cdot\mathbb{T} +
-  \mathbf{f}.
+  \rho \left(\frac{\partial \vb{v}}{\partial t} + \vb{v} \cdot
+    \nabla \vb{v}\right) = -\nabla p + \nabla \cdot\mathbb{T} +
+  \vb{f}.
 \end{equation}
 $\mathbb{T}$ is the stress tensor, and \vb{f} are the external volumic
 forces exerting on the fluid (gravity, electromagnetic ...).  We need
 an expression of $\mathbb{T}$ as a function of the other variables for
-the model to be complete. The second term, $\mathbf{v} \cdot \nabla
-\mathbf{v}$, known as the convective acceleration, is to be understood
+the model to be complete. The second term, $\vb{v} \cdot \nabla
+\vb{v}$, known as the convective acceleration, is to be understood
 as $(\vb{v} \cdot \nabla) \vb{v}$, that is, the ``transport operator''
 $(\vb{v} \cdot \nabla) = \sum_{i=1}^d v_i \frac{\partial}{\partial i}$
 applied to $\vb{v}$.
@@ -56,7 +90,7 @@ applied to $\vb{v}$.
 The conservation of mass equation is
 \begin{equation}
   \label{ns-mass}
-  \frac{\partial \rho}{\partial t} + \nabla \cdot (\rho \mathbf{v}) = 0.
+  \frac{\partial \rho}{\partial t} + \nabla \cdot (\rho \vb{v}) = 0.
 \end{equation}
 
 These equations can be derived by applying conservation laws to an
@@ -104,8 +138,8 @@ temperature to the reference state). The momentum equation now
 becomes :
 \begin{equation}
   \label{ns-mom}
-  \rho \left(\frac{\partial \mathbf{v}}{\partial t} + \mathbf{v} \cdot
-    \nabla \mathbf{v}\right) = -\nabla p + \mu \Delta \vb{v} + \alpha g
+  \rho \left(\frac{\partial \vb{v}}{\partial t} + \vb{v} \cdot
+    \nabla \vb{v}\right) = -\nabla p + \mu \Delta \vb{v} + \alpha g
   T \vb{e_z}.
 \end{equation}
 
@@ -126,8 +160,8 @@ to only two. The final form of our equations is then
   \label{b-mass}
   \nabla \cdot \vb{v} &= 0& \text{Mass}\\
   \label{b-mom}
-  \frac{\partial \mathbf{v}}{\partial t} + \mathbf{v} \cdot
-  \nabla \mathbf{v} +\nabla p - Pr \Delta \vb{v} - Ra Pr T
+  \frac{\partial \vb{v}}{\partial t} + \vb{v} \cdot
+  \nabla \vb{v} +\nabla p - Pr \Delta \vb{v} - Ra Pr T
   \vb{e_z} &= \vb{0}& \text{Momentum}\\
   \label{b-ene}
   \frac{\partial T}{\partial t} + \vb{v} \cdot \nabla T - \Delta
@@ -188,11 +222,11 @@ Our problem is now to choose suitable interpolation methods for the
 integrals.
 \subsubsection{Discretisation}
 TODO
-Principe de la discrétisation : imposer un contrôle pour utiliser des
-arguments de compacité : consistent et stable
+Principe de la discr\'etisation : imposer un contr\^ole pour utiliser des
+arguments de compacit\'e : consistent et stable
 \subsubsection{Stabilisation}
 TODO Tel quel : pas inversible, modes oscillants de pression. Ajout de
-la stabilisation : expliquer comment. Méthode de clusters.
+la stabilisation : expliquer comment. M\'ethode de clusters.
 \subsection{Newton method}
 At the core of the algorithm is the solution of a nonlinear system of
 size equal to the number of cells. We use the standard Newton
@@ -320,13 +354,13 @@ methods.
 \section{The chimney problem}
 TODO intro benchmark, free convection
 \subsection{Physical setup}
-TODO schéma
+TODO sch\'ema
 \subsection{Boundary conditions}
 TODO LB/GB, pression en haut ...
 
 \section{Numerical experiments}
 \subsection{Methodology}
-TODO paramètres fixes \& variables
+TODO param\`etres fixes \& variables
 \subsection{Convergence}
 \subsubsection{Newton convergence}
 \label{sec:conv_newton}
@@ -342,8 +376,8 @@ x_{n-1}||_\infty$.
 \end{figure}
 
 \subsubsection{Mesh convergence}
-TODO trouver un critère : problème modèle dont la solution est connue
-et trouver l'ordre ? ou alors l'admettre et vérifier la convergence
+TODO trouver un crit\`ere : probl\`eme mod\`ele dont la solution est connue
+et trouver l'ordre ? ou alors l'admettre et v\'erifier la convergence
 sur des courbes
 \subsection{Effects of different boundary conditions}
 TODO rapport avec benchmark, lequere. comparer les courbes
@@ -361,14 +395,18 @@ TODO rapport avec benchmark, lequere. comparer les courbes
 \end{table}
 \subsection{Chimney in a larger box}
 TODO interfacer triangle avec le programme, ou mesher en
-rectangles. Va poser des problèmes en stationnaire parce que
+rectangles. Va poser des probl\`emes en stationnaire parce que
 turbulent, essayer en instationnaire et voir si il y a solution
-stationnaire dans la cheminée
+stationnaire dans la chemin\'ee
 \section{Conclusion}
 TODO
 \listoffigures
 \listoftables
 
-\begin{thebibliography}{99}
-\end{thebibliography}
+
+\bibliographystyle{plain}
+\addcontentsline{toc}{section}{References}
+\bibliography{rapport}
+
+
 \end{document}
