--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -19,7 +19,15 @@
 \author{Antoine Levitt}
 \title{Finite volumes method for incompressible Navier-Stokes equations}
 \maketitle
-\abstract{TODO}
+\abstract{
+  In this project we study numerical methods to numerically approximate
+the steady state of a flow. We present the Navier-Stokes equations and
+their approximations for free convection (Boussinesq hypothesis). We
+use the colocated scheme introduced in
+\cite{che-09-col,che-08-col,che-06-num} and apply it to a benchmark
+problem, a heated chimney. On this problem, different boundary
+conditions are compared, and numerical properties of the scheme are
+obtained.}
 \tableofcontents
 \newpage
 
